# chiketi-appliance

./: .gitignore  BLUEPRINT.md  CLAUDE.md  PLAN.md  README.md  TASKS.md  config.example.yaml  pyproject.toml
appliance/: __main__.py  app.py  config.py  hosts.py  panel_spec.py  server.py  themes.py
appliance/collectors/: __init__.py  base.py  registry.py  remote.py  ssh_commands.py
scripts/: install.sh  setup-ssh.sh
tests/: test_api.py  test_cli.py  test_config.py  test_ssh_parsers.py
