[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chiketi-appliance"
version = "0.1.0"
description = "Remote system monitoring dashboard for Raspberry Pi"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "paramiko>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
chiketi-appliance = "appliance.__main__:main"
